force-app/main/default/objects/vlocity_ins__DocumentClause__c/fields/vlocity_ins__ClauseContent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClauseContent__c</fullName>
    <description>Clause Content</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clause Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>