force-app/main/default/objects/vlocity_ins__DocumentClause__c/fields/vlocity_ins__ShortName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ShortName__c</fullName>
    <description>ShortName is unique across all document clauses in clause library</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Short Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>