force-app/main/default/objects/vlocity_ins__DocumentClause__c/fields/vlocity_ins__Tokens__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Tokens__c</fullName>
    <description>Tokens inserted into this clause</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tokens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>